<resources>
    <string name="app_name">iData_Android</string>
    <string name="action_settings">設定</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">上一頁</string>

    <string name="connect">連接</string>
    <string name="create">新增</string>
    <string name="retrive">讀取</string>
    <string name="update">更新</string>
    <string name="delete">刪除</string>
    <string name="retrieve_by">讀取根據...</string>
    <string name="retrive_all">讀取全部</string>
    <string name="elder_id">Elder ID</string>


    <string name="spinnerList">spinnerList</string>
    <string name="elder_name">Name</string>
    <string name="elder">Elder</string>
    <string name="temperature">Temperature</string>
    <string name="add_elder">Add Elder</string>
    <string name="elder_name2">Elder Name :</string>
    <string name="bed_no">Bed No :</string>
    <string name="success_addelder">Success</string>
    <string name="input_elder_name">Name</string>
    <string name="input_bed_no">床位號碼</string>
    <string name="input_temperature">Temperature :</string>
    <string name="input_elder_id">Elder ID :</string>
    <string name="bttn_add_temperature">Add Temperature</string>
    <string name="input_ip_address">Input ip address</string>
    <string name="read_local_data">讀取本機資料</string>
    <string name="local_data">本機資料</string>
    <string name="read_server_data">讀取伺服器資料</string>
    <string name="sync_data">資料同步</string>
    <string name="temp">temp..</string>
    <string name="id">ID</string>
    <string name="time_m_d">時間(月-日)</string>
    <string name="tempwithsymbol">溫度°C</string>
    <string name="status">上傳</string>
    <string name="re_enter">重新輸入</string>
    <string name="elderId">院友ID: </string>
    <string name="change_ip">更改</string>
    <string name="id_dialog">院友ID</string>
    <string name="name_dialog">名稱</string>
    <string name="bedno_dialog">床號</string>
    <string name="device_id_dialog">掃瞄裝置號碼</string>
    <string name="temperature_diaog">溫度°C</string>
    <string name="timestamp_dialog">量溫時間</string>
    <string name="status_dialog">同步狀態</string>
    <string name="seperator">:  </string>
    <string name="name">名稱</string>
    <string name="ip">伺服器IP :</string>
    <string name="dot">‧</string>

    <string-array name="searchelders_array">
        <item>id</item>
        <item>name</item>
        <item>bed_no</item>
    </string-array>

</resources>
