<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hk.com.caretech.clive.idata_android.Server.Fragment_serverCrud_second">

    <Button
        android:id="@+id/previous_serverdata_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_toServer_serverdata_crud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To server :"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/previous_serverdata_crud"
        app:layout_constraintStart_toStartOf="@id/previous_serverdata_crud"/>

    <Button
        android:id="@+id/create_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/textView_toServer_serverdata_crud"
        />

    <Button
        android:id="@+id/retrive_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/retrive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/create_bttn"
        app:layout_constraintTop_toTopOf="@id/create_bttn"
        app:layout_constraintBottom_toBottomOf="@id/create_bttn"/>

    <Button
        android:id="@+id/update_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="@id/create_bttn"
        app:layout_constraintTop_toBottomOf="@id/create_bttn" />

    <Button
        android:id="@+id/del_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="@id/retrive_bttn"
        app:layout_constraintEnd_toEndOf="@id/retrive_bttn"
        app:layout_constraintTop_toTopOf="@id/update_bttn"
        app:layout_constraintBottom_toBottomOf="@id/update_bttn"/>




</androidx.constraintlayout.widget.ConstraintLayout>