<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_crud_create">

    <Button
        android:id="@+id/previous_crud_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/bttn_addElder_fragment_crud_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="80dp"
            android:text="@string/elder"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bttn_addTemp_fragment_crud_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>