<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="hk.com.caretech.clive.idata_android.Server.Fragment_server_first">

    <Button
        android:id="@+id/previous_serverdata_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edittext_ipAddress_server_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/input_ip_address"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />


    <Button
        android:id="@+id/bttn_connect_server_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_marginVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_ipAddress_server_data" />

</androidx.constraintlayout.widget.ConstraintLayout>