<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_crud_retrieve">

    <Button
        android:id="@+id/previous_crud_retrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/retriveBysummit_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/retrieve_by"
        app:layout_constraintStart_toStartOf="@id/previous_crud_retrieve"
        app:layout_constraintTop_toBottomOf="@id/previous_crud_retrieve" />

    <Button
        android:id="@+id/retrieveAllsummit_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/retrive_all"
        app:layout_constraintStart_toStartOf="@id/retriveBysummit_bttn"
        app:layout_constraintTop_toBottomOf="@id/retriveBysummit_bttn" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/retrieveAllsummit_bttn"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_retrive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>