<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hk.com.caretech.clive.idata_android.Server.RetrieveTemperatureActivity">

    <Button
        android:id="@+id/previous_temptable_local_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_countUnsyncData_temptable_local_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/previous_temptable_local_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/previous_temptable_local_recyclerview" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_temptable_local_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previous_temptable_local_recyclerview"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_temptable_local_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp"/>

    <TextView
        android:id="@+id/textView_elderID_temptable_local_recyclerview"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="3dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/id"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintlayout_temptable_local_recyclerview" />

    <TextView
        android:id="@+id/textView_temp_temptable_local_recyclerview"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/tempwithsymbol"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_temptable_local_recyclerview"
        app:layout_constraintTop_toTopOf="@id/constraintlayout_temptable_local_recyclerview" />

    <TextView
        android:id="@+id/textView_timestamp_temptable_local_recyclerview"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="3dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/time_m_d"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/textView_temp_temptable_local_recyclerview"
        app:layout_constraintTop_toTopOf="@id/constraintlayout_temptable_local_recyclerview" />

    <TextView
        android:id="@+id/textView_status_temptable_local_recyclerview"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintlayout_temptable_local_recyclerview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_temptable_local_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/constraintlayout_temptable_local_recyclerview"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_temptable_local_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider_temptable_local_recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"/>



</androidx.constraintlayout.widget.ConstraintLayout>