<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hk.com.caretech.clive.idata_android.Server.RetrieveTemperatureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout_temp_table_server_recyclerview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    <Button
        android:id="@+id/previous_temp_table_server_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/constraintlayout_temp_table_server_recyclerview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/textView_showElderID_temp_table_server_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elder_id"
            android:textSize="20sp"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textView_showElderName_temp_table_server_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elder_name"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toEndOf="@id/textView_showElderID_temp_table_server_recyclerview"
            app:layout_constraintTop_toTopOf="@id/textView_showElderID_temp_table_server_recyclerview"
            app:layout_constraintBottom_toBottomOf="@id/textView_showElderID_temp_table_server_recyclerview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <View
        android:id="@+id/divider_temp_table_server_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_temp_table_server_recyclerview"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_temp_table_server_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider_temp_table_server_recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"/>



</androidx.constraintlayout.widget.ConstraintLayout>